[package]
name = "game"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "a64c0d4dba45d440c9256c05826c7b6fdd38b95a" }

[[bin]]
name = "game_client"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "game_server"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]